--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -771,7 +771,7 @@ ul.slide {
 			<div class="caption">Kamar Deluxe</div>
 		</li>
                 <li class="slide-4">
-			<img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"/>
 			<div class="caption">Homestay</div>
 		</li>
 	</ul>
@@ -809,21 +809,21 @@ HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut
 
 Kontak Kami
 </a>
-</li>
+</li><br>
 <li>
 <a href="/objek-wisata-jogja/">
 
 
 Wisata Jogja
 </a>
-</li>
+</li><br>
 <li>
 <a href="/advice/">
 
 
 Cabang Janturan Yogyakarta
 </a>
-</li>
+</li><br>
 <li>
 <a href="/advice/">
 
