--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -365,7 +365,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 /*# sourceMappingURL=main.css.map */
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
-nav a {display:inline-block; text-decoration:none; padding:3px; color:#444; letter-spacing:1px; font-size:0.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+nav a {display:inline-block; text-decoration:none; padding:3px; color:#444; letter-spacing:1px; font-size:0.7em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 span.wave {
   animation-name: wave-animation;
   animation-duration: 2.5s;
@@ -1041,19 +1041,19 @@ ul.slide {
 	<ul class="slide">
 		<li class="slide-1">
 			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp"/>
-			<div class="caption">Sewa Mobil 1</div>
+			<div class="caption">Unit Avanza</div>
 		</li>
 		<li class="slide-2">
 			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m2.webp"/>
-			<div class="caption">Sewa Mobil 2</div>
+			<div class="caption">Unit Avanza</div>
 		</li>
 		<li class="slide-3">
 			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp"/>
-			<div class="caption">Sewa Mobil 3</div>
+			<div class="caption">Unit Avanza</div>
 		</li>
                 <li class="slide-4">
 			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m4.webp"/>
-			<div class="caption">Sewa Mobil 4</div>
+			<div class="caption">Garasi Samirono</div>
 		</li>
 	</ul>
 
