--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -457,7 +457,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="/uploads/beat-trail.jpg" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg" alt="" width="440" height="440" /></p>
 
 </blockquote>
 
@@ -527,7 +527,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="/uploads/genio.jpg" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg" alt="" width="440" height="440" /></p>
 
 </blockquote>
 
@@ -597,7 +597,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="/uploads/fjimg-20191224-145508.png" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png" alt="" width="440" height="440" /></p>
 
 </blockquote>
 
@@ -667,7 +667,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="/uploads/scoopy.jpg" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg" alt="" width="440" height="440" /></p>
 
 </blockquote>
 
@@ -737,7 +737,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="/uploads/vario.jpg" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg" alt="" width="440" height="440" /></p>
 
 </blockquote>
 
