--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -485,7 +485,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="/uploads/m1.jpg" alt="" width="650" height="450" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/m1.jpg" alt="" width="650" height="450" /></p>
 </blockquote>
 
 
@@ -542,7 +542,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 
 <div class="staff-bio">
-<p></p><p><img src="/uploads/m3.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/m3.jpg" alt="" width="650" height="450" /></p>
 
 
 <h4 id="harga-sewa--"><br />HARGA SEWA    </h4>
@@ -598,7 +598,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 
 <div class="staff-bio">
-<p></p><p><img src="/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
 
 
 <h4 id="harga-sewa">HARGA SEWA</h4>
@@ -654,7 +654,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 
 <div class="staff-bio">
-<p></p><p><img src="/uploads/brio.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/brio.jpg" alt="" width="650" height="450" /></p>
 
 
 <h4 id="harga-sewa">HARGA SEWA</h4>
@@ -701,7 +701,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
   </ul>
 
 
-  <p><img src="/uploads/march.jpg" alt="" width="650" height="450" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/march.jpg" alt="" width="650" height="450" /></p>
 </blockquote>
 </p>
 </div>
@@ -717,7 +717,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="/uploads/agya.jpg" alt="" width="300" height="225" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/agya.jpg" alt="" width="300" height="225" /></p>
 </blockquote>
 
 
@@ -775,7 +775,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="/uploads/calya.jpg" alt="" width="300" height="225" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/calya.jpg" alt="" width="300" height="225" /></p>
 </blockquote>
 
 
