--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <meta property="og:site_name" content="Bening Abadi Transport Website" /> 
 <meta property="og:description" content="Rental Motor Sewa Mobil Jogja Penginapan Murah Yogyakarta Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png" />
-<meta property="og:image:secure_url" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png" />
+<meta property="og:image" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png?&v2" />
+<meta property="og:image:secure_url" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png?&v2" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="400" />
 <meta property="og:image:height" content="300" />
@@ -33,11 +33,11 @@
 <meta name="twitter:creator" content="@beningabad1" />
 <meta name="twitter:title" content="Bening Abadi Transport" />
 <meta name="twitter:description" content="Rental Motor, Sewa Mobil Jogja dan Penginapan Yogyakarta" />
-<meta name="twitter:image" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png" />
+<meta name="twitter:image" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png?&v2" />
 <link rel="canonical" href="https://beningabaditransport.com" />
 <meta property="og:url" content="https://beningabaditransport.com/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/siteicon.png"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/siteicon.png?&v2"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <style>
 html { font-size: 11px; -webkit-tap-highlight-color: transparent; }
@@ -415,10 +415,10 @@ span.wave {
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <div class="testimonials">
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya"><small>Sewa mobil lepas kunci mulai 250 ribu perhari!!</small></a></p><p><img alt="mobil" src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m14.webp" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya"><small>Sewa mobil lepas kunci mulai 250 ribu perhari!!</small></a></p><p><img alt="mobil" src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m14.webp?&v2" width="260" height="139"></p>
 		</blockquote>
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><small>Nginep nyaman semaleman di Jogja cuma 150 ribu!!&emsp;&emsp;</small></a></p><p><img alt="kamar" src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/kamar-icon1.webp" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><small>Nginep nyaman semaleman di Jogja cuma 150 ribu!!&emsp;&emsp;</small></a></p><p><img alt="kamar" src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/kamar-icon1.webp?&v2" width="260" height="139"></p>
 		</blockquote>             
 </div>
 </article>
@@ -437,7 +437,7 @@ span.wave {
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp" alt="" width="650" height="450" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp?&v2" alt="" width="650" height="450" /></p>
 </blockquote>
 
 
@@ -494,7 +494,7 @@ span.wave {
 
 
 <div class="staff-bio">
-<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?&v2" alt="" width="650" height="450" /></p>
 
 
 
@@ -548,7 +548,7 @@ span.wave {
 
 
 <div class="staff-bio">
-<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/brio-manual.jpg?&v2" alt="" width="650" height="450" /></p>
 
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
@@ -600,7 +600,7 @@ span.wave {
 
 
 <div class="staff-bio">
-<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/brio.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/brio.jpg?&v2" alt="" width="650" height="450" /></p>
 
 
 <h4 id="lepas-kunci--">LEPAS KUNCI    </h4>
@@ -659,7 +659,7 @@ span.wave {
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/agya.jpg" alt="" width="300" height="225" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/agya.jpg?&v2" alt="" width="300" height="225" /></p>
 </blockquote>
 
 
@@ -717,7 +717,7 @@ span.wave {
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/calya.jpg" alt="" width="300" height="225" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/calya.jpg?&v2" alt="" width="300" height="225" /></p>
 </blockquote>
 
 
@@ -771,7 +771,7 @@ span.wave {
 
 			<div class="staff-bio">
 				<p><blockquote>
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5b0bed6990b95.webp" alt="" width="800" height="600" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/content-5b0bed6990b95.webp?&v2" alt="" width="800" height="600" /></p>
 </blockquote>
 
 </p>
@@ -1023,35 +1023,35 @@ ul.slide {
 
 	<ul class="slide">
 		<li class="slide-1">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp?&v2"/>
 			<div class="caption">Kamar Deluxe</div>
 		</li>
 		<li class="slide-2">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp?&v2"/>
 			<div class="caption">Kamar Deluxe</div>
 		</li>
 		<li class="slide-3">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp?&v2"/>
 			<div class="caption">Kamar Deluxe</div>
 		</li>
                 <li class="slide-4">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp?&v2"/>
 			<div class="caption">Home Stay Petinggen</div>
 		</li>
 		<li class="slide-5">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k7.webp?&v2"/>
 			<div class="caption">Tempat Kongkow GH</div>
 		</li>
 		<li class="slide-6">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp?&v2"/>
 			<div class="caption">Rental Motor</div>
 		</li>
 		<li class="slide-7">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m8.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m8.webp?&v2"/>
 			<div class="caption">Rental Mobil</div>
 		</li>
 		<li class="slide-8">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k6.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k6.webp?&v2"/>
 			<div class="caption">Pintu Masuk Bening Samirono</div>
 		</li>
 	</ul>
