--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -457,7 +457,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -527,7 +527,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -597,7 +597,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -667,7 +667,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -737,7 +737,7 @@ h3  { text-decoration: underline overline;
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg" alt="" width="440" height="440" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -957,19 +957,19 @@ ul.slide {
 
 	<ul class="slide">
 		<li class="slide-1">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s1.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s1.webp?&v2"/>
 			<div class="caption">Unit Honda Genio</div>
 		</li>
 		<li class="slide-2">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s2.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s2.webp?&v2"/>
 			<div class="caption">Unit Beat Street New</div>
 		</li>
 		<li class="slide-3">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s3.webp?&v2"/>
 			<div class="caption">Garasi Samirono</div>
 		</li>
                 <li class="slide-4">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s4.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/s4.webp?&v2"/>
 			<div class="caption">Unit Honda Scoopy</div>
 		</li>
 	</ul>
