--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -485,7 +485,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/m1.jpg" alt="" width="650" height="450" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/m1.jpg?func=crop&w=320&h=240&v2"/></p>
 </blockquote>
 
 
@@ -542,7 +542,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 
 <div class="staff-bio">
-<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/m3.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/m3.jpg?func=crop&w=320&h=240&v2"></p>
 
 
 <h4 id="harga-sewa--"><br />HARGA SEWA    </h4>
@@ -598,7 +598,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 
 <div class="staff-bio">
-<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/brio-manual.jpg?func=crop&w=320&h=240&v2"></p>
 
 
 <h4 id="harga-sewa">HARGA SEWA</h4>
@@ -654,7 +654,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 
 <div class="staff-bio">
-<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/brio.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/brio.jpg?func=crop&w=320&h=240&v2"></p>
 
 
 <h4 id="harga-sewa">HARGA SEWA</h4>
@@ -701,7 +701,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
   </ul>
 
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/march.jpg" alt="" width="650" height="450" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/march.jpg?func=crop&w=320&h=240&v2"></p>
 </blockquote>
 </p>
 </div>
@@ -717,7 +717,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/agya.jpg" alt="" width="300" height="225" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/agya.jpg?func=crop&w=320&h=240&v2"></p>
 </blockquote>
 
 
@@ -775,7 +775,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/calya.jpg" alt="" width="300" height="225" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/calya.jpg?func=crop&w=320&h=240&v2"</p>
 </blockquote>
 
 
@@ -829,7 +829,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 			<div class="staff-bio">
 				<p><blockquote>
-  <p><img src="/uploads/content-5b0bed6990b95.webp" alt="" width="800" height="600" /></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b0bed6990b95.webp?func=crop&w=320&h=240&v2"></p>
 </blockquote>
 
 </p><h4 id="harga-sewa">HARGA SEWA</h4>
@@ -1040,19 +1040,19 @@ ul.slide {
 
 	<ul class="slide">
 		<li class="slide-1">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp?&v2"/>
 			<div class="caption">Unit Avanza</div>
 		</li>
 		<li class="slide-2">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m2.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m2.webp?&v2"/>
 			<div class="caption">Unit Avanza</div>
 		</li>
 		<li class="slide-3">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?&v2"/>
 			<div class="caption">Unit Avanza</div>
 		</li>
                 <li class="slide-4">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m4.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m4.webp?&v2"/>
 			<div class="caption">Garasi Samirono</div>
 		</li>
 	</ul>
