--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -485,7 +485,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 
 <div class="staff-bio">
-<p></p><p><img src="/uploads/content-5a4df3448bb6d-1-650x450.jpg" alt="" width="650" height="450" /></p>
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5a4df3448bb6d-1-650x450.jpg?func=crop&w=320&h=240&v2"></p>
 
 
 <p><strong>Harga Sewa 1 Rumah 2 Lantai : 550.000/malam (maximal 10 orang)</strong></p>
@@ -535,7 +535,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 
 <div class="staff-bio">
-<img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="kamar-deluxe" width="150" height="113" class="center">
+<img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a82fb5c8e-e1560855835374.jpg?func=crop&w=150&h=113&v2" alt="kamar deluxe" class="center">
 </div>
 
 
@@ -572,7 +572,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 <div class="staff-bio">
 <p><blockquote>
-  <p><img src="/uploads/content-5b18a8a3a357f-e1561076685884.jpg" alt="" width="150" height="113"></p>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a8a3a357f-e1561076685884.jpg?func=crop&w=150&h=113&v2" alt="kamar standar"></p>
 </blockquote>
 
 
@@ -759,19 +759,19 @@ ul.slide {
 
 	<ul class="slide">
 		<li class="slide-1">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.webp?&v2">
 			<div class="caption">Kamar Deluxe</div>
 		</li>
 		<li class="slide-2">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k13.webp?&v2">
 			<div class="caption">Kamar Deluxe</div>
 		</li>
 		<li class="slide-3">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.webp?&v2">
 			<div class="caption">Kamar Deluxe</div>
 		</li>
                 <li class="slide-4">
-			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp"/>
+			<img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k4.webp?&v2">
 			<div class="caption">Homestay</div>
 		</li>
 	</ul>
