--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -433,7 +433,7 @@ h3  { text-decoration: underline overline;
 
  </div>
 
-<p class="editor-link"><a href="cloudcannon:collections/_data_motor" class="btn"><strong>&#9998;</strong>Daftar Sewa Motor Jogja</a></p>
+<p class="editor-link"><a class="btn"><strong>&#9998;</strong>Daftar Sewa Motor Jogja</a></p>
 
 <ul class="staff-list">
 
