--- a/index.html
+++ b/index.html
@@ -449,10 +449,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-275-ribu">•12 Jam 250 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-325-ribu">•24 Jam 300 ribu</h4>
   </li>
 </ul>
 
@@ -462,10 +462,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-375-ribu">10 Jam 350 ribu</h4>
+    <h4 id="10-jam-375-ribu">•10 Jam 350 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -475,10 +475,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-500-ribu">10 Jam 475 ribu</h4>
+    <h4 id="10-jam-500-ribu">•10 Jam 475 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-550-ribu">Per Hari 525 ribu</h4>
+    <h4 id="per-hari-550-ribu">•Per Hari 525 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -503,10 +503,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 225 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
+    <h4 id="24-jam-300-ribu">•24 Jam 275 ribu</h4>
   </li>
 </ul>
 
@@ -516,10 +516,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+    <h4 id="10-jam-350-ribu">•10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -529,10 +529,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+    <h4 id="10-jam-450-ribu">•10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-550-ribu">Per Hari 525 ribu</h4>
+    <h4 id="per-hari-550-ribu">•Per Hari 525 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -555,10 +555,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 225 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
+    <h4 id="24-jam-300-ribu">•24 Jam 275 ribu</h4>
   </li>
 </ul>
 
@@ -568,10 +568,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+    <h4 id="10-jam-350-ribu">•10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -581,10 +581,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+    <h4 id="10-jam-450-ribu">•10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
+    <h4 id="per-hari-500-ribu">•Per Hari 475 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -608,10 +608,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-275-ribu">•12 Jam 250 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-325-ribu">•24 Jam 300 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -635,10 +635,10 @@ span.wave {
 
   <ul>
     <li>
-      <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
+      <h4 id="12-jam-250-ribu">•12 Jam 225 ribu</h4>
     </li>
     <li>
-      <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
+      <h4 id="24-jam-300-ribu">•24 Jam 275 ribu</h4>
     </li>
   </ul>
 
@@ -671,10 +671,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 200 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 200 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 250 ribu</h4>
+    <h4 id="24-jam-300-ribu">•24 Jam 250 ribu</h4>
   </li>
 </ul>
 
@@ -684,10 +684,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+    <h4 id="10-jam-350-ribu">•10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -697,10 +697,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+    <h4 id="10-jam-450-ribu">•10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
+    <h4 id="per-hari-500-ribu">•Per Hari 475 ribu</h4>
   </li>
 </ul>
 <p></p>
@@ -729,10 +729,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
+    <h4 id="12-jam-275-ribu">•12 Jam 250 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
+    <h4 id="24-jam-325-ribu">•24 Jam 300 ribu</h4>
   </li>
 </ul>
 
@@ -742,10 +742,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+    <h4 id="10-jam-350-ribu">•10 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
   </li>
 </ul>
 
@@ -755,10 +755,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+    <h4 id="10-jam-450-ribu">•10 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
+    <h4 id="per-hari-500-ribu">•Per Hari 475 ribu</h4>
   </li>
 </ul>
 <li class="staff">
@@ -780,10 +780,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 200 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 200 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 250 ribu</h4>
+    <h4 id="24-jam-300-ribu">•24 Jam 250 ribu</h4>
   </li>
 </ul>
 
@@ -791,10 +791,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-350-ribu">12 Jam 325 ribu</h4>
+    <h4 id="12-jam-350-ribu">•12 Jam 325 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-400-ribu">Per Hari 375 ribu</h4>
+    <h4 id="per-hari-400-ribu">•Per Hari 375 ribu</h4>
   </li>
 </ul>
 
@@ -802,10 +802,10 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-450-ribu">12 Jam 425 ribu</h4>
+    <h4 id="12-jam-450-ribu">•12 Jam 425 ribu</h4>
   </li>
   <li>
-    <h4 id="per-hari-550-ribu">Per Hari  525 ribu</h4>
+    <h4 id="per-hari-550-ribu">•Per Hari  525 ribu</h4>
   </li>
 </ul>
 <p></p>
