--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -471,31 +471,31 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="65-ribu-karyumum">70 Ribu (kary/umum)</h4>
+    <h4 id="65-ribu-karyumum">•70 Ribu (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="55-ribu-mahasiswa-jogja">60 Ribu (mahasiswa jogja)</h4>
+    <h4 id="55-ribu-mahasiswa-jogja">•60 Ribu (mahasiswa jogja)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="max-2-helm-per-1-motor">Max 2 helm per 1 motor</h4>
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
 
   </li>
 
   <li>
 
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">Jas hujan (selama persediaan masih ada)</h4>
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
 
   </li>
 
@@ -541,31 +541,31 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="65-ribu-karyumum">80 ribu (kary/umum)</h4>
+    <h4 id="65-ribu-karyumum">•80 ribu (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="55-ribu-mahasiswa-jogja">70 ribu (mahasiswa jogja)</h4>
+    <h4 id="55-ribu-mahasiswa-jogja">•70 ribu (mahasiswa jogja)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="max-2-helm-per-1-motor">Max 2 helm per 1 motor</h4>
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
 
   </li>
 
   <li>
 
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">Jas hujan (selama persediaan masih ada)</h4>
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
 
   </li>
 
@@ -611,31 +611,31 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="60000-karyumum">70.000 (kary/umum)</h4>
+    <h4 id="60000-karyumum">•70.000 (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="50000-mahasiswa-jogja">60.000 (mahasiswa jogja)</h4>
+    <h4 id="50000-mahasiswa-jogja">•60.000 (mahasiswa jogja)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="max-2-helm-per-1-motor">Max 2 helm per 1 motor</h4>
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
 
   </li>
 
   <li>
 
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">Jas hujan (selama persediaan masih ada)</h4>
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
 
   </li>
 
@@ -681,31 +681,31 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="60000-karyumum">80.000 (kary/umum)</h4>
+    <h4 id="60000-karyumum">•80.000 (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="50000-mahasiswa-jogja">70.000 (mahasiswa jogja)</h4>
+    <h4 id="50000-mahasiswa-jogja">•70.000 (mahasiswa jogja)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="max-2-helm-per-1-motor">Max 2 helm per 1 motor</h4>
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
 
   </li>
 
   <li>
 
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="jas-hujan-selama-persediaan-masih-ada">Jas hujan (selama persediaan masih ada)</h4>
+    <h4 id="jas-hujan-selama-persediaan-masih-ada">•Jas hujan (selama persediaan masih ada)</h4>
 
   </li>
 
@@ -751,25 +751,25 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="60000-karyumum">100.000 (kary/umum)</h4>
+    <h4 id="60000-karyumum">•100.000 (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="50000-mahasiswa-jogja">90.000 (mahasiswa jogja)</h4>
+    <h4 id="50000-mahasiswa-jogja">•90.000 (mahasiswa jogja)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="max-2-helm-per-1-motor">Max 2 helm per 1 motor</h4>
+    <h4 id="max-2-helm-per-1-motor">•Max 2 helm per 1 motor</h4>
 
   </li>
 
   <li>
 
-    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
+    <h4 id="free-pengantaran-dan-pengambilan-di-area-kota-stasiun-dan-hotel">•Free pengantaran dan pengambilan di area kota (stasiun dan hotel)</h4>
 
   </li>
 
